tests/cases/traits/errors/trait-impl-extra-method.ari
trait Show[T] {
  fn show(self) -> i64
}

impl Show[i64] for i64 {
  fn show(self) -> i64 {
    return self;
  }

  fn debug(self) -> i64 {
    return self;
  }
}

fn main() -> i64 {
  return 0;
}
